--- a/buildstockbatch/schemas/v0.3.yaml
+++ b/buildstockbatch/schemas/v0.3.yaml
@@ -26,7 +26,7 @@ gcp-spec:
   batch_array_size: num(min=1, max=10000, required=True)
   notifications_email: regex('^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$', name='email', required=True)
   gcs: include('gcs-spec', required=True)
-  use_spot: bool(required=True)
+  use_spot: bool(required=False)
 
 gcs-spec:
   bucket: str(required=True)
