--- a/buildstockbatch/schemas/v0.3.yaml
+++ b/buildstockbatch/schemas/v0.3.yaml
@@ -28,6 +28,7 @@ gcp-spec:
   # notifications_email: regex('^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$', name='email', required=True)
   gcs: include('gcs-spec', required=True)
   use_spot: bool(required=False)
+  job_environment: include('gcp-job-environment', required=False)
 
 gcs-spec:
   bucket: str(required=True)
@@ -35,6 +36,11 @@ gcs-spec:
 
 gcp-ar-spec:
   repository: str(required=True)
+
+gcp-job-environment:
+  vcpus: int(min=1, max=224, required=False)
+  memory_mib: int(min=512, required=False)
+  machine_type: str(required=False)
 
 aws-spec:
   job_identifier: regex('^[a-zA-Z]\w{,9}$', required=True)
