--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - develop
-  pull_request:
+  pull_request_target:
     types:
       - synchronize
       - opened
