--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           cd buildstockbatch
           python -m pip install --progress-bar off --upgrade pip
-          pip install .[dev,gcp] --progress-bar off
+          pip install .[dev] --progress-bar off
       - name: Linting
         run: |
           cd buildstockbatch
